// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component renders level 1 1`] = `
<div
  class="Hero Hero--lvl-1"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root container MuiContainer-maxWidthXl"
    >
      <div
        class="wrapper"
      >
        <div
          class="content"
        >
          <h1
            class="MuiTypography-root title title--truncated Typography Typography--underline MuiTypography-h1"
          >
            H1 Heading
          </h1>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
          </div>
        </div>
      </div>
    </div>
  </div>
  <img
    alt="Lorem ipsum"
    class="image Media"
    src="path-to-image"
  />
</div>
`;

exports[`Hero component renders level 1 with CTA 1`] = `
<div
  class="Hero Hero--lvl-1"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root container MuiContainer-maxWidthXl"
    >
      <div
        class="wrapper"
      >
        <div
          class="content"
        >
          <h1
            class="MuiTypography-root title title--truncated Typography Typography--underline MuiTypography-h1"
          >
            H1 Heading
          </h1>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button cta Button--dark-background MuiButton-outlinedPrimary"
            label="CTA action"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              CTA action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <img
    alt="Lorem ipsum"
    class="image Media"
    src="path-to-image"
  />
</div>
`;

exports[`Hero component renders level 2 1`] = `
<div
  class="Hero Hero--slim Hero--lvl-2"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root container MuiContainer-maxWidthXl"
    >
      <div
        class="wrapper"
      >
        <div
          class="content"
        >
          <h1
            class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
          >
            H1 Heading
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 3 1`] = `
<div
  class="Hero Hero--light Hero--slim Hero--lvl-3"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root container MuiContainer-maxWidthXl"
    >
      <div
        class="wrapper"
      >
        <div
          class="content"
        >
          <h1
            class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
          >
            H1 Heading
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders with deprecated imageSource 1`] = `
<div
  class="Hero Hero--lvl-1"
>
  <div
    class="Container"
  >
    <div
      class="MuiContainer-root container MuiContainer-maxWidthXl"
    >
      <div
        class="wrapper"
      >
        <div
          class="content"
        >
          <h1
            class="MuiTypography-root title title--truncated Typography Typography--underline MuiTypography-h1"
          >
            H1 Heading
          </h1>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tincidunt quam. Fusce et semper lectus, eu tincidunt ligula. Phasellus suscipit dolor nisl, nec vestibulum odio molestie tincidunt.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  />
</div>
`;
